Align items correctly

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
-  height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,4 +25,24 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header,
+.footer{
+  display: flex;
+}
+
+.left-links{
+  display: flex;
+  margin-right: auto;
+}
+
+.right-links{
+  display: flex;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
